--- a/index.html
+++ b/index.html
@@ -2,35 +2,62 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Events calendar</title>
+  <title>Registration from</title>
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 
-  Want to go to Mars?
-We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.
+  <section>
+    <div class="max-length">
+      <h1>Want to go to Mars?</h1>
+      <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
 
-Personal details
-Name
-Age
-Email
-Physical fitness
-- Super-human
-- Fit as a fiddle
-- Not terribly strong
-- A little couch-potato-y
-Address
+      <form method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
+        <fieldset>
+          <legend class="italic">Personal details</legend>
 
-Mission statement
-Why do you want to go to Mars?
+          <label for="name">Name</label>
+          <input id="name" name="name">
 
-Register for the trip!
+          <label for="age">Age</label>
+          <input id="age">
 
-Request to join the mission
+          <label for="email">Email</label>
+          <input id="email" type="email">
+
+          <label for="fitness">Physical fitness</label>
+          <select id="fitness">
+            <option>Super-human</option>
+            <option>Fit as a fiddle</option>
+            <option>Not terribly strong</option>
+            <option>A little couch-potato-y</option>
+          </select>
+
+          <label for="address">Address</label>
+          <input id="address">
+        </fieldset>
+
+        <fieldset>
+          <legend class="italic">Mission statement</legend>
+
+          <label for="message">Why do you want to go to Mars?</label>
+          <textarea id="message">
+          </textarea>
+        </fieldset>
+
+        <div>
+          <button class="btn" type="submit">Register for the trip!</button>
+        </div>
+        Request to join the mission
+      </form>
+
+    </div>
+  </section>
 
 </body>
 </html>
