--- a/index.html
+++ b/index.html
@@ -18,42 +18,52 @@
       <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
 
       <form method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
-        <fieldset>
+        <fieldset class="remove-border">
           <legend class="italic">Personal details</legend>
-
-          <label for="name">Name</label>
-          <input id="name" name="name">
-
-          <label for="age">Age</label>
-          <input id="age">
-
-          <label for="email">Email</label>
-          <input id="email" type="email">
-
-          <label for="fitness">Physical fitness</label>
-          <select id="fitness">
-            <option>Super-human</option>
-            <option>Fit as a fiddle</option>
-            <option>Not terribly strong</option>
-            <option>A little couch-potato-y</option>
-          </select>
-
-          <label for="address">Address</label>
-          <input id="address">
+          <div class="grid">
+            <div class="unit">
+              <label for="name">Name</label>
+              <input id="name" name="name">
+            </div>
+            <div class="unit">
+              <label for="age">Age</label>
+              <input id="age" name="age">
+            </div>
+            <div class="unit">
+              <label for="email">Email</label>
+              <input id="email" name="email">
+            </div>
+            <div class="unit">
+              <label for="fitness">Physical fitness</label>
+              <select id="fitness" name="fitness">
+                <option>Super-human</option>
+                <option>Fit as a fiddle</option>
+                <option>Not terribly strong</option>
+                <option>A little couch-potato-y</option>
+              </select>
+            </div>
+            <div class="unit">
+              <label for="address">Address</label>
+              <textarea id="address" name="address"></textarea>
+            </div>
+          </div>
         </fieldset>
 
-        <fieldset>
+        <fieldset class="remove-border">
           <legend class="italic">Mission statement</legend>
+          <div class="grid">
+            <div class="unit">
+              <label for="message">Why do you want to go to Mars?</label>
+              <textarea id="message" name="message"></textarea>
+            </div>
 
-          <label for="message">Why do you want to go to Mars?</label>
-          <textarea id="message">
-          </textarea>
-        </fieldset>
+            <div class="unit">
+              <button class="btn" type="submit">Register for the trip!</button>
+            </div>
+          </fieldset>
 
-        <div>
-          <button class="btn" type="submit">Register for the trip!</button>
-        </div>
-        Request to join the mission
+        <input type="hidden" name="hidden" value="Request to join the mission">
+
       </form>
 
     </div>
