--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 </head>
 <body>
 
-  <section>
-    <div class="max-length">
-      <h1>Want to go to Mars?</h1>
-      <p>We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
+  <section class="gutter-1-4 pad-t-1-4">
+    <div class="max-length gutter-1-2">
+      <h1 class="not-bold pad-t">Want to go to Mars?</h1>
+      <p class="mega">We’re looking for super-awesome human beings who want to make the long trek to Mars for the adventure of a lifetime.</p>
 
       <form method="POST" action="https://formspree.io/doug0139@algonquinlive.com">
-        <fieldset class="remove-border">
-          <legend class="italic">Personal details</legend>
+        <fieldset class="remove-border push-0">
+          <legend class="italic giga push">Personal details</legend>
           <div class="grid">
-            <div class="unit">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-2 push">
               <label for="name">Name</label>
               <input id="name" name="name">
             </div>
-            <div class="unit">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-2 push">
               <label for="age">Age</label>
               <input id="age" name="age">
             </div>
-            <div class="unit">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-2 push">
               <label for="email">Email</label>
               <input id="email" name="email">
             </div>
-            <div class="unit">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1-2 unit-xl-1-2 push">
               <label for="fitness">Physical fitness</label>
               <select id="fitness" name="fitness">
                 <option>Super-human</option>
@@ -42,25 +42,26 @@
                 <option>A little couch-potato-y</option>
               </select>
             </div>
-            <div class="unit">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 push">
               <label for="address">Address</label>
               <textarea id="address" name="address"></textarea>
             </div>
           </div>
         </fieldset>
 
-        <fieldset class="remove-border">
-          <legend class="italic">Mission statement</legend>
+        <fieldset class="remove-border push-0">
+          <legend class="italic giga push">Mission statement</legend>
           <div class="grid">
-            <div class="unit">
+            <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 push">
               <label for="message">Why do you want to go to Mars?</label>
               <textarea id="message" name="message"></textarea>
             </div>
 
-            <div class="unit">
-              <button class="btn" type="submit">Register for the trip!</button>
+            <div class="unit unit-content-distribute unit-xs-1 unit-s-1 unit-m-1 unit-l-1 unit-xl-1 push">
+              <button class="btn content-shrink" type="submit">Register for the trip!</button>
             </div>
-          </fieldset>
+          </div>
+        </fieldset>
 
         <input type="hidden" name="hidden" value="Request to join the mission">
 
